--- a/client/src/app/views/genes/genes-detail/genes-detail.component.less
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.less
@@ -15,6 +15,10 @@ nz-page-header {
  }
 }
 
+nz-page-header-title.flagged {
+  padding-left: .75em;
+}
+
 .revision-list {
   .revision-description-diff {
     .diff {
