--- a/client/src/app/views/genes/genes-suggest-revision/genes-suggest-revision.component.html
+++ b/client/src/app/views/genes/genes-suggest-revision/genes-suggest-revision.component.html
@@ -1,1 +1,8 @@
-<p>Suggest Gene Revisions</p>
+<nz-row>
+  <nz-col nzSpan="16" >
+    form
+  </nz-col>
+  <nz-col nzSpan="8" >
+    instructions
+  </nz-col>
+</nz-row>
