--- a/client/src/app/views/genes/genes-summary/genes-summary.component.html
+++ b/client/src/app/views/genes/genes-summary/genes-summary.component.html
@@ -38,6 +38,7 @@
                   <!-- Revision Card -->
                   <nz-card nzType="inner"
                     nzSize="small"
+                    style="width: 100%"
                     [nzTitle]="revCardHeaderTitle"
                     [nzExtra]="revCardHeaderExtra">
 
