--- a/client/src/app/views/genes/genes-suggest-revision/genes-suggest-revision.component.html
+++ b/client/src/app/views/genes/genes-suggest-revision/genes-suggest-revision.component.html
@@ -1,8 +1,29 @@
-<nz-row>
+<nz-row [nzGutter]="16">
   <nz-col nzSpan="16" >
-    form
+    <nz-card nzTitle="Suggest Revision Form" nz-type="inner" style="min-height: 350px">
+
+    </nz-card>
   </nz-col>
   <nz-col nzSpan="8" >
-    instructions
+    <nz-card nzTitle="Instructions" nz-type="inner">
+      <nz-space nzDirection="vertical" style="width: 100%">
+        <nz-space-item>
+          <nz-skeleton
+            [nzParagraph]="{ rows: 1 }"></nz-skeleton>
+        </nz-space-item>
+        <nz-space-item>
+          <nz-skeleton
+            [nzParagraph]="{ rows: 3 }"></nz-skeleton>
+        </nz-space-item>
+        <nz-space-item>
+          <nz-skeleton
+            [nzParagraph]="{ rows: 4 }"></nz-skeleton>
+        </nz-space-item>
+        <nz-space-item>
+          <nz-skeleton
+            [nzParagraph]="{ rows: 5 }"></nz-skeleton>
+        </nz-space-item>
+      </nz-space>
+    </nz-card>
   </nz-col>
 </nz-row>
