--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -1,23 +1,5 @@
 <ng-container *ngIf="gene$ | async as gene">
-  <nz-ribbon [nzText]="flaggedText"
-    nzPlacement="start"
-    nzColor="#ff3333">
-    <ng-template #flaggedText>
-      <a routerLink="flags"
-        style="color: #FFF;">
-        <i nz-icon
-          nzType="flag"
-          nzTheme="fill"
-          nz-tooltip
-          nzTooltipPlacement="top"
-          nzTooltipColor="#FF3333"
-          [nzTooltipTitle]="flaggedTooltip"></i>
-      </a>
-    </ng-template>
-    <ng-template #flaggedTooltip>
-      <i nz-icon
-        nzType="civic:gene"></i> {{ flagsTotal > 1 ? gene.name + ' has ' + flagsTotal + ' flags' : 'Entity has been flagged' }}
-    </ng-template>
+  <div cvcFlaggable [flags]="flagsTotal">
     <nz-page-header class="site-page-header">
       <nz-page-header-title [ngClass]="{ 'flagged': flagsTotal > 0 }">
         <nz-space nzDirection="horizontal"
@@ -25,7 +7,6 @@
           <nz-space-item>
             <button nz-button
               nzType="default"
-              nzSize="small"
               nz-popover
               nzPopoverPlacement="bottom"
               [nzPopoverContent]="editPopover">
@@ -119,8 +100,9 @@
         <cvc-lifecycle-actions></cvc-lifecycle-actions>
         <div class="content">
           <router-outlet></router-outlet>
+
         </div>
       </nz-page-header-content>
     </nz-page-header>
-  </nz-ribbon>
+  </div>
 </ng-container>
