--- a/client/src/app/views/genes/genes-suggest-revision/genes-suggest-revision.component.html
+++ b/client/src/app/views/genes/genes-suggest-revision/genes-suggest-revision.component.html
@@ -1,8 +1,6 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="16" >
-    <nz-card nzTitle="Suggest Revision Form" nz-type="inner" style="min-height: 350px">
-
-    </nz-card>
+    <cvc-gene-suggest-revision-form [geneId]="geneId"></cvc-gene-suggest-revision-form>
   </nz-col>
   <nz-col nzSpan="8" >
     <nz-card nzTitle="Instructions" nz-type="inner">
