created new genes-comments service to be passed to comment-list

--- a/client/src/app/views/genes/genes-comments/genes-comments.component.html
+++ b/client/src/app/views/genes/genes-comments/genes-comments.component.html
@@ -1,6 +1,6 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="18">
-    <cvc-comment-list [subject]="subject$ | async"></cvc-comment-list>
+    <cvc-comment-list></cvc-comment-list>
   </nz-col>
   <nz-col nzSpan="6">
     <nz-card nzTitle="Commentors" nz-type="inner" style="margin-bottom: 1em">
