refactored genes-revisions service, view component working

--- a/client/src/app/views/genes/genes-revisions/genes-revisions.component.html
+++ b/client/src/app/views/genes/genes-revisions/genes-revisions.component.html
@@ -1,6 +1,6 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="18">
-    <ng-container *ngIf="(revisions$ | async) as revisions">
+    <ng-container *ngIf="service.revisions$ | ngrxPush as revisions">
       <nz-card nzTitle="Revisions"
         class="card-list">
         <nz-list [nzDataSource]="revisions"
