--- a/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
+++ b/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
@@ -2,25 +2,35 @@
   [formGroup]="suggestGeneRevisionForm"
   (ngSubmit)="submitRevision(suggestGeneRevisionForm.value)"
   nzLayout="vertical">
+  <input type="hidden" name="id">
   <ng-container *ngIf="(submitError$ | async) as errors">
     <nz-form-item *ngIf="errors.length > 0">
       <cvc-form-errors-alert [errors]="errors">
       </cvc-form-errors-alert>
     </nz-form-item>
   </ng-container>
-  <nz-form-item>
+  <ng-container *ngIf="submitSuccess$ | async" >
+    <nz-alert nzType="success"
+      nzMessage="Suggested Revision Submitted"
+      [nzDescription]="successMessage"
+      nzShowIcon></nz-alert>
+    <ng-template #successMessage nzSize="small">
+      <p>View it on the <a routerLink="../revisions">Revisions Page</a></p>
+    </ng-template>
+  </ng-container>
+  <nz-form-item formGroupName="fields" *ngIf="!(submitSuccess$ | async)">
     <nz-form-label>Description</nz-form-label>
     <nz-form-control nzErrorTip="Please enter a description at least 10 characters in length.">
       <textarea formControlName="description" nz-input rows="4" placeholder="Enter a gene description here."></textarea>
     </nz-form-control>
   </nz-form-item>
-  <nz-form-item>
+  <nz-form-item *ngIf="!(submitSuccess$ | async)">
     <nz-form-label nzRequired>Revision Comment</nz-form-label>
     <nz-form-control nzErrorTip="Please enter a comment at least 10 characters in length.">
       <textarea formControlName="comment" nz-input rows="4" placeholder="Enter your comment here."></textarea>
     </nz-form-control>
   </nz-form-item>
-  <nz-form-item>
+  <nz-form-item  *ngIf="!(submitSuccess$ | async)">
     <nz-form-control>
       <cvc-form-buttons>
         <cvc-org-selector-btn-group
@@ -37,5 +47,4 @@
     </nz-form-control>
   </nz-form-item>
 </form>
-<p>Most Recent Org: {{ mostRecentOrg | json }}</p>
-<ngx-json-viewer [json]="suggestGeneRevisionForm.value"></ngx-json-viewer>
+<!-- <ngx-json-viewer *ngIf="suggestGeneRevisionForm" [json]="suggestGeneRevisionForm.value"></ngx-json-viewer> -->
