--- a/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
+++ b/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
@@ -34,7 +34,7 @@
     <nz-form-control>
       <cvc-form-buttons>
         <cvc-org-selector-btn-group
-          (orgSelected)="selectOrg($event)">
+          [(selectedOrg)]="this.mostRecentOrg">
           <button type="submit" nz-button
             cvcOrgSelectorBtn
             nzType="primary"
