--- a/client/src/app/views/genes/genes-revisions/genes-revisions.component.html
+++ b/client/src/app/views/genes/genes-revisions/genes-revisions.component.html
@@ -34,7 +34,7 @@
                       style="text-align: right;">
                       <nz-space nzDirection="horizontal">
                         <nz-space-item>
-                          <cvc-org-selector-btn-group (orgSelected)="selectOrg($event)">
+                          <cvc-org-selector-btn-group [(selectedOrg)]="mostRecentOrg">
                             <button type="submit"
                               nz-button
                               cvcOrgSelectorBtn
@@ -45,7 +45,7 @@
                           </cvc-org-selector-btn-group>
                         </nz-space-item>
                         <nz-space-item>
-                          <cvc-org-selector-btn-group (orgSelected)="selectOrg($event)">
+                          <cvc-org-selector-btn-group [(selectedOrg)]="mostRecentOrg">
                             <button type="submit"
                               nz-button
                               cvcOrgSelectorBtn
