--- a/client/src/app/views/genes/genes-comments/genes-comments.component.html
+++ b/client/src/app/views/genes/genes-comments/genes-comments.component.html
@@ -3,7 +3,16 @@
     <cvc-comment-list [commentsService]="service"></cvc-comment-list>
   </nz-col>
   <nz-col nzSpan="6">
-    <cvc-participant-list listTitle="Commenters" [participantList]="service.commenters$ | ngrxPush" (participantSelectedEvent)="onParticipantSelected($event)"></cvc-participant-list>
+    <cvc-participant-list listTitle="Commenters" [participantList]="service.commenters$ | ngrxPush" (participantSelectedEvent)="onParticipantSelected($event)">
+      <ng-template #itemTemplate let-user>
+        <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
+        </nz-avatar>
+        <ng-template #noAvatar>
+            <nz-avatar nz-comment-avatar [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
+        </ng-template>
+        <span>{{user.username}}</span>
+      </ng-template>
+    </cvc-participant-list>
     <nz-card nzTitle="Curators Mentioned" nz-type="inner" style="margin-bottom: 1em">
       <nz-space nzDirection="vertical" style="width: 100%">
         <nz-space-item>
