--- a/client/src/app/views/genes/genes-revisions/genes-revisions.component.html
+++ b/client/src/app/views/genes/genes-revisions/genes-revisions.component.html
@@ -102,25 +102,16 @@
     </ng-container>
   </nz-col>
   <nz-col nzSpan="6">
-    <nz-card nzTitle="Revisors"
-      nz-type="inner"
-      style="margin-bottom: 1em">
-      <nz-space nzDirection="vertical"
-        style="width: 100%">
-        <nz-space-item>
-          <nz-skeleton [nzAvatar]="true"
-            [nzParagraph]="{ rows: 0 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton [nzAvatar]="true"
-            [nzParagraph]="{ rows: 0 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton [nzAvatar]="true"
-            [nzParagraph]="{ rows: 0 }"></nz-skeleton>
-        </nz-space-item>
-      </nz-space>
-    </nz-card>
+    <cvc-participant-list listTitle="Revisors" [participantList]="service.uniqueRevisors$ | ngrxPush" (participantSelectedEvent)="onRevisorSelected($event)">
+      <ng-template #itemTemplate let-user>
+        <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
+        </nz-avatar>
+        <ng-template #noAvatar>
+            <nz-avatar nz-comment-avatar [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
+        </ng-template>
+        <span>{{user.username}}</span>
+      </ng-template>
+    </cvc-participant-list>
     <cvc-participant-list listTitle="Fields Revised" [participantList]="service.revisionFields$ | ngrxPush" (participantSelectedEvent)="onFieldNameSelected($event)">
       <ng-template #itemTemplate let-field>
         <span>{{field.displayName}}</span>
