gene suggest form resets itself to initial value upon successful submit

--- a/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
+++ b/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
@@ -15,7 +15,7 @@
       nzShowIcon></nz-alert>
     <ng-template #successMessage
       nzSize="small">
-      <p>View it on the <a routerLink="../revisions">Revisions Page</a></p>
+      <p>View it on the <a routerLink="../revisions">Revisions Page</a> or suggest another revision below.</p>
     </ng-template>
   </ng-container>
   <formly-form [form]="formGroup"
