--- a/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
+++ b/client/src/app/forms/components/gene-suggest-revision-form/gene-suggest-revision-form.component.html
@@ -39,5 +39,13 @@
     </nz-form-control>
   </nz-form-item>
 </form>
-<ngx-json-viewer *ngIf="formGroup"
-  [json]="formGroup.value"></ngx-json-viewer>
+<div nz-row>
+  <div nz-col nzSpan="12">
+    <ngx-json-viewer *ngIf="formGroup"
+      [json]="formGroup.value"></ngx-json-viewer>
+  </div>
+  <div nz-col nzSpan="12">
+    <ngx-json-viewer *ngIf="formModel"
+      [json]="formModel"></ngx-json-viewer>
+  </div>
+</div>
