--- a/client/src/app/views/genes/genes-summary/genes-summary.component.html
+++ b/client/src/app/views/genes/genes-summary/genes-summary.component.html
@@ -15,6 +15,7 @@
         nzSpan="12">
         <cvc-my-gene-info [geneInfo]="myGeneInfo$ | async"></cvc-my-gene-info>
       </div>
+      <cvc-variant-menu [geneId]="gene.id"></cvc-variant-menu>
     </div>
   </nz-space-item>
   <nz-space-item>
