basic flag mutation form working

--- a/client/src/app/views/genes/genes-flags/genes-flags.component.html
+++ b/client/src/app/views/genes/genes-flags/genes-flags.component.html
@@ -14,7 +14,7 @@
       </nz-list>
     </nz-card>
     <nz-card nzTitle="Add a Flag" nz-type="inner" style="min-height: 150px;">
-
+      <cvc-flag-entity [flaggable]="flaggable"></cvc-flag-entity>
     </nz-card>
   </nz-col>
   <nz-col nzSpan="8" >
